--- a/src/main/resources/com/example/helloworld/sign-in.fxml
+++ b/src/main/resources/com/example/helloworld/sign-in.fxml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@lunchapp.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.helloworld.SignInController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@lunchapp.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.helloworld.SignInController">
    <children>
       <Button fx:id="signupButton" layoutX="14.0" layoutY="363.0" mnemonicParsing="false" onAction="#onSignUp" text="Sign Up" />
       <Button fx:id="enterButton" layoutX="273.0" layoutY="303.0" mnemonicParsing="false" onAction="#onEnter" text="Enter" />
@@ -19,5 +16,7 @@
       <TextField fx:id="passwordField" layoutX="223.0" layoutY="233.0" promptText="Password" />
       <TextField fx:id="usernameField" layoutX="224.0" layoutY="174.0" promptText="Username" />
       <Button fx:id="orderButton" layoutX="100.0" layoutY="363.0" mnemonicParsing="false" onAction="#onOrder" text="Order" />
+      <Label layoutX="153.0" layoutY="180.0" text="Username" />
+      <Label layoutX="153.0" layoutY="239.0" text="Password" />
    </children>
 </AnchorPane>
