--- a/src/main/resources/com/example/helloworld/sign-up.fxml
+++ b/src/main/resources/com/example/helloworld/sign-up.fxml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@lunchapp.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.helloworld.SignUpController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@lunchapp.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.helloworld.SignUpController">
    <children>
       <Button fx:id="signupButton" layoutX="14.0" layoutY="363.0" mnemonicParsing="false" onAction="#onSignIn" text="Sign Up" />
       <Button id="enterButton" layoutX="271.0" layoutY="363.0" mnemonicParsing="false" onAction="#onEnter" text="Enter" />
@@ -24,5 +21,8 @@
             <TextField id="confirmPasswordField" fx:id="passwordField" promptText="Enter Password Again" />
          </children>
       </VBox>
+      <Label layoutX="183.0" layoutY="100.0" text="Username" />
+      <Label layoutX="183.0" layoutY="141.0" text="Password" />
+      <Label layoutX="125.0" layoutY="180.0" text="Confirm Password" />
    </children>
 </AnchorPane>
