--- a/src/main/resources/com/example/helloworld/history.fxml
+++ b/src/main/resources/com/example/helloworld/history.fxml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.helloworld.historyController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.helloworld.historyController">
    <center>
       <Pane prefHeight="200.0" prefWidth="200.0" stylesheets="@lunchapp.css" BorderPane.alignment="CENTER">
          <children>
@@ -17,6 +14,10 @@
                 <TableColumn fx:id="drinkCol" prefWidth="100.0" text="Drink Type" />
                   <TableColumn fx:id="priceCol" prefWidth="115.0" text="Price" />
                   <TableColumn fx:id="caloriesCol" prefWidth="115.0" text="Calories" />
+                  <TableColumn fx:id="additonsCol" prefWidth="115.0" text="Additions" />
+                  <TableColumn fx:id="sizeCol" prefWidth="115.0" text="Size" />
+                  <TableColumn fx:id="tempCol" prefWidth="115.0" text="Temperature" />
+                  <TableColumn fx:id="caffeineCol" prefWidth="115.0" text="Caffeine" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
